# datum

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-08-foundation-postgresql.md
docs/superpowers/specs/: 2026-06-08-dbstudio-design.md  2026-06-29-sidebar-tree-search-design.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: test-pg.sh  test-redis.sh
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/core/: connection.rs  credentials.rs  mod.rs  repository.rs
src-tauri/src/my/: browse.rs  client.rs  commands.rs  mod.rs
src-tauri/src/pg/: browse.rs  client.rs  commands.rs  edit.rs  mod.rs
src-tauri/src/rds/: client.rs  commands.rs
src-tauri/src/sqlite/: browse.rs  client.rs  commands.rs  edit.rs
src/api/: connections.test.ts  connections.ts  mysql.ts  pg.test.ts  pg.ts  redis.ts  sqlite.ts
src/components/: ContextMenu.tsx  ErrorBoundary.tsx  MiddleEllipsis.tsx  Modal.tsx  SqlView.tsx  Toast.tsx
src/components/Sidebar/: ConnectionForm.test.tsx  ConnectionForm.tsx  ConnectionList.test.tsx  ConnectionList.tsx  ObjectTree.test.tsx  ObjectTree.tsx
src/components/chrome/: Breadcrumb.tsx  IconButton.tsx  (+3 more)
src/lib/: clipboard.ts  csv.test.ts  csv.ts  sidebarSearch.test.ts  sidebarSearch.ts  sqlgen.test.ts  sqlgen.ts  sqlstmt.test.ts  sqlstmt.ts
src/state/: store.test.ts  store.ts
src/theme/: ThemeProvider.test.tsx  ThemeProvider.tsx  theme.css  tokens.test.ts  tokens.ts
(+15 files in other folders)
